[gd_scene load_steps=14 format=3 uid="uid://bdmtyudpl0d5n"]

[ext_resource type="Script" path="res://scenes/items/sword/sword.gd" id="1_etavp"]
[ext_resource type="PackedScene" uid="uid://d1ywvfmuv4812" path="res://debugteststuff/mastasword.glb" id="2_odf65"]
[ext_resource type="AudioStream" uid="uid://ctkp7dfgdcael" path="res://sound/itemsfx/sword/sw1.mp3" id="3_7bdgb"]
[ext_resource type="AudioStream" uid="uid://b8vcfthlpgt5b" path="res://sound/itemsfx/sword/sw2.mp3" id="3_siu2k"]
[ext_resource type="Material" uid="uid://bx8etap7ykq1n" path="res://materials/barrier.tres" id="4_v6vff"]
[ext_resource type="AudioStream" uid="uid://b5g3fkw17ktln" path="res://sound/itemsfx/sword/sw5.mp3" id="5_2thpu"]
[ext_resource type="Material" uid="uid://beeq8klm4nnlv" path="res://resources/models/p_model/mats/base.tres" id="7_xnj6i"]

[sub_resource type="Animation" id="Animation_6ipyq"]
resource_name = "dfswordidle"
length = 0.1
step = 0.05
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("res/sw1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_hiboe"]
resource_name = "dfswordswing1"
length = 0.2
step = 0.025
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.025, 1, 0.614734, 0.614734, 0.349431, 0.349431, 0.05, 1, -0.206935, -0.206935, 0.67615, 0.676149, 0.125, 1, -0.412125, -0.412125, 0.57459, 0.57459, 0.35, 1, 0.696676, 0.696676, -0.121007, -0.121007)
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("res/sw1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_7bdgb")
}],
"times": PackedFloat32Array(0.05)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_g1cvy"]
resource_name = "dfswordswing2"
length = 0.3
step = 0.05
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.697, 0.697, -0.121, -0.121, 0.05, 1, -0.290676, -0.290676, 0.644599, 0.644599, 0.15, 1, 0.539048, 0.539048, 0.457632, 0.457632, 0.25, 1, 0.599176, 0.599176, 0.375484, 0.375484, 0.3, 1, 0.556515, 0.556515, 0.436223, 0.436223)
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("res/sw1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_2thpu")
}],
"times": PackedFloat32Array(0.1)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_g8la8"]
resource_name = "dfswordswing3"
length = 0.5
step = 0.01
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.556515, 0.556515, 0.436223, 0.436223, 0.025, 1, 0.743261, -0.0150799, 0.100419, 0.66125, 0.125, 1, 0.992371, 0.0303968, 0.000689205, -0.119481, 0.15, 1, 0.975627, 0.0395302, -0.0447292, 0.211158, 0.175, 1, 0.756341, 0.0560922, -0.0204207, 0.651449, 0.2, 1, -0.156351, 0.0468669, 0.036971, 0.985896, 0.22, 1, -0.281121, 0.0296932, 0.0357254, 0.958547, 0.325, 1, -0.152609, -0.0334085, 0.00345668, 0.987716)
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("res/sw1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_siu2k")
}],
"times": PackedFloat32Array(0.18)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yxsb7"]
_data = {
"dfswordidle": SubResource("Animation_6ipyq"),
"dfswordswing1": SubResource("Animation_hiboe"),
"dfswordswing2": SubResource("Animation_g1cvy"),
"dfswordswing3": SubResource("Animation_g8la8")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_f7pbq"]
size = Vector3(0.304199, 1.52753, 0.491104)

[node name="activeSlot" type="Node3D" groups=["parrying"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.363695)
script = ExtResource("1_etavp")

[node name="res" type="Node3D" parent="."]
transform = Transform3D(1, 1.13687e-13, 1.13687e-13, -1.13687e-13, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="mastasword" parent="res" instance=ExtResource("2_odf65")]
transform = Transform3D(0.189068, 0.00267829, 0.182668, 0.156658, 0.132863, -0.164094, -0.0939844, 0.226851, 0.0939511, 4.76751e-08, 0.392645, -0.0863143)

[node name="sw1" type="AudioStreamPlayer3D" parent="res"]
transform = Transform3D(1, 3.27795e-08, 1.94763e-10, 9.16654e-09, -0.285337, 0.958427, 3.14723e-08, -0.958427, -0.285337, -1.05803e-09, 0.53767, 0.0194208)

[node name="sw2" type="AudioStreamPlayer3D" parent="res"]
transform = Transform3D(1, 3.27795e-08, 1.94763e-10, 9.16654e-09, -0.285337, 0.958427, 3.14723e-08, -0.958427, -0.285337, -1.05803e-09, 0.53767, 0.0194208)
stream = ExtResource("3_siu2k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yxsb7")
}

[node name="hitBox" type="Area3D" parent="."]
transform = Transform3D(1, 9.17835e-09, 3.10431e-08, -2.55443e-08, 0.812796, 0.582549, -1.98849e-08, -0.582549, 0.812796, -0.0247134, 0.100425, 0.233564)

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitBox"]
transform = Transform3D(1, -2.59482e-08, -2.00306e-08, 9.16657e-09, 0.808042, -0.589126, 3.14723e-08, 0.589126, 0.808042, 0.00340903, 0.591892, 0.0158575)
shape = SubResource("BoxShape3D_f7pbq")

[node name="CSGBox3D" type="CSGBox3D" parent="hitBox"]
transform = Transform3D(1, 1.49012e-08, 0, 0, 0.80799, -0.589196, 0, 0.589196, 0.80799, 0, 0.598552, 0.0221701)
size = Vector3(0.304, 1.528, 0.491)
material = ExtResource("4_v6vff")

[node name="Timer" type="Timer" parent="."]

[node name="righthand" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0547573, -0.430646, -0.19991)
radius = 0.15
material = ExtResource("7_xnj6i")

[connection signal="body_entered" from="hitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="hitBox" to="." method="_on_hit_box_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
